test/message/esm_display_syntax_error_module.out
(node:*) ExperimentalWarning: The ESM module loader is experimental.
file:///*/test/fixtures/es-module-loaders/syntax-error.mjs:2
await async () => 0;
^^^^^^^^^^^^^

SyntaxError: Malformed arrow function parameter list
    at Loader.moduleStrategy (internal/modules/esm/translators.js:*:*)
    at async link (internal/modules/esm/module_job.js:*:*)
